# sdfs

./: README.md
src/: CMakeLists.txt  Makefile  benchmarktest.sh  config.h.in  sdfs.h  sdfs.x  sdfs_client.c  sdfs_client_fuse.c  sdfs_clnt.c  sdfs_server.c  sdfs_svc.c  sdfs_xdr.c
